# qa-app-streamlit

./: .gitignore  .streamlit_sal  CODEOWNERS  Dockerfile  README.md  components.py  qa-streamlit.py  qa_chat_bot.py  requirements-dev.txt  requirements.txt  run_tests.sh  start-app.sh  template_info.json  utils.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: notify-slack.yml  reminder.yml  run_tests.yml
src/: components.py  config.py  constants.py  dr_requests.py  metadata.yaml  pyproject.toml  qa_chat_bot.py  requirements.txt  start-app.sh  utils.py
src/.streamlit/: config.toml
src/styles/: icons.scss  main.scss  sal-stylesheet.css  variables.scss
styles/: main.scss
tests/: conftest.py  test_qa_chat_bot.py  test_qa_chat_bot_llm_context.py  test_qa_chat_bot_llm_gateway.py  test_utils.py
tests/mocks/: mock_chat_api_no_stream.json  mock_chat_api_no_stream_legacy_citations.json  mock_chat_api_no_stream_no_citations.json  mock_delta_chunk.json  mock_final_chunk.json  mock_final_chunk_no_citations.json  mock_initial_chunk.json  prediction_response.csv  prediction_response_context_citations.csv
